fix: .grid-item wrong width Wrong column width 320px - 550px fixed

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -6,6 +6,8 @@
     height: calc(0.750 * var(--grid-w));
     object-fit: contain;
     transition: 0.5s ease-in-out;
+    align-self: center;
+    justify-self: center;
 }
 
 .photo-grid__item:hover {
